# bluetooth_2_hid

./: .gitignore  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE.md  README.md  bluetooth2usb.service  bluetooth_2_hid.py  bluetooth_2_hid.service  bluetooth_2_usb.py  bluetooth_2_usb.service  bluetooth_2_usb.sh  connect.sh  constraints.txt  evdev_2_hid.py  install.sh  install2.sh  install_python_3.11.sh  logger.py  pyproject.toml  requirements.txt  update.sh  usb_hid.service  usb_hid.sh
.github/workflows/: python-publish.yml
bluetooth_2_usb/: __init__.py  args.py  bluetooth_usb_proxy.py  ecodes.py  evdev.py  evdev_adapter.py  input_device_relay.py  logging.py  proxy_loop.py  relay.py  relay_controller.py
lib/: argpaser.py  args.py  constants.py  device_link.py  evdev_2_hid.py  evdev_adapter.py  evdev_converter.py  logger.py  usb_hid.py
libs/: hid_codes.py  keyboard.py
scripts/: build_python_3.11.sh  freeze_requirements.sh  install.sh  uninstall.sh  update.sh
src/bluetooth_2_usb/: __init__.py  args.py  evdev.py  logging.py  relay.py
